--- a/resources/sass/pages/_messenger.scss
+++ b/resources/sass/pages/_messenger.scss
@@ -207,11 +207,13 @@
       bottom: 0;
       display: flex;
       flex-direction: column;
+      background: linear-gradient(-45deg, #111324, #191d24);
       // background: white;
       padding: 1px;
       z-index: 1000;
       transition: all .3s ease-in-out;
       border: $border-thickness solid $border-color;
+      border-radius: $border-r;
 
       &.min {
         height: 40px;
@@ -232,7 +234,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: $write-comment-bg;
+        // background: $write-comment-bg;
         color: $accents;
         position: relative;
         z-index: inherit;
@@ -287,7 +289,7 @@
 
       .chat-body {
         width: 100%;
-        background: $secondary;
+        // background: $secondary;
         height: 300px;
         overflow: auto;
         padding: .5rem 1rem;
@@ -333,14 +335,15 @@
 
       .chat-compose {
         width: 100%;
-        background: $write-comment-bg;
+        // background: $write-comment-bg;
         color: $lr-menu-headers;
         display: grid;
         grid-template-columns: 4fr 1fr;
         z-index: inherit;
 
         input[type='text'] {
-          background: $write-comment-bg;
+          // background: $write-comment-bg;
+          background: transparent;
           color: $accents;
           font-size: .8rem;
           &::placeholder {
